--- a/css/test.css
+++ b/css/test.css
@@ -270,9 +270,9 @@ img.img-block {
 }
 .headertext {
     font-family: 'Oswald', sans-serif;
-    font-size: 16px;
+    font-size: 15px;
     letter-spacing: 1px;
-    margin: 5px 0;
+    padding: 5px 0;
     background-color: white;
     color: black;
 }
