--- a/css/kinastudio_littleHeader.css
+++ b/css/kinastudio_littleHeader.css
@@ -180,21 +180,16 @@ h2.widetext { margin-top: 12px; }
 
 img.logo {
     width: 100%;
-    max-width: 340px;
+    max-width: 110px;
     margin-top: 20px;
     margin-bottom: 0;
 }
 
 img.menulogo {
-    margin-top: 25px;
-    /*margin-right: 40px;*/
+    margin-top: 10px;
+    margin-right: 40px;
     margin-left: 0px;
-    /*margin-bottom: -3px;*/
-}
-
-.mainnav a.menulogo-wrapper {
-    display: block;
-    margin: 5px 0 10px 0;
+    margin-bottom: -10px;
 }
 
 img.img-block {
@@ -209,17 +204,18 @@ img.img-block {
     /* text-align: left; */
     margin-top: 0px;
     display: block;
-	padding: 6px 0;
+	padding: 25px 0;
     background-color: black;
+    padding-top: 11px;
 }
 
 .mainnav a {
-    letter-spacing: 1.5px;
+    letter-spacing: 1.8px;
     font-weight: 200;
     margin-left: 10px;
     margin-right: 10px;
-    padding: 0px 0px;
-    font-size: 12px;
+    padding: 5px 0px;
+    font-size: 13px;
     color: white;
     border-bottom: 1px solid transparent;
 }
@@ -231,7 +227,7 @@ img.img-block {
 .mainnav a.weddinglink {
     font-family: 'Alex Brush', cursive;
     color: antiquewhite;
-    font-size: 22px;
+    font-size: 24px;
 }
 
 .topline {
@@ -269,12 +265,9 @@ img.img-block {
     margin-bottom:0px;
 }
 .headertext {
-    font-family: 'Oswald', sans-serif;
-    font-size: 15px;
     letter-spacing: 1px;
-    padding: 5px 0;
-    background-color: white;
-    color: black;
+    margin-top: 10px;
+    margin-bottom: 8px;
 }
 .white {
     color: white;
@@ -438,7 +431,7 @@ body .instagram-element .instagram-photo:hover img {
 
 
 
-@media (max-width: 750px) {
+@media (max-width: 1000px) {
 
     .desktop { display:none; }
     .desktop-inline { display:none; }
@@ -456,13 +449,13 @@ body .instagram-element .instagram-photo:hover img {
     }
 
     .mainnav a {
-        font-weight: 300;
-        font-size: 15px;
+	font-weight: 400;
+        font-size: 16px;
         display: block;
         margin-top: 0px; /* FONT ISSUE */
         padding: 20px 5px;
-        text-align: left;
-        border-top: 1px solid #dedede;
+	text-align: left;
+	border-top: 1px solid #dedede;
     }
 
 	.mainnav a.menuitem:hover {
@@ -473,9 +466,9 @@ body .instagram-element .instagram-photo:hover img {
 
     .mainnav a.menulogo-wrapper { display: none; }
 
-    .mainnav a.weddinglink {
-        font-size: 26px;
-    }
+.mainnav a.weddinglink {
+    font-size: 28px;
+}
 	
 	
 	
@@ -495,13 +488,13 @@ body .instagram-element .instagram-photo:hover img {
         float: left;
     }
     .menuicon img { 
-        width: 29px;
+        width: 30px;
         margin-top: 20px;
     }
 
     .logoicon {
-        margin-top: 27px;
-        margin-bottom: 20px;
+        margin-top: 18px;
+        margin-bottom: -5px;
         position: relative;
         text-align: center;
         width: 70%;
@@ -510,9 +503,9 @@ body .instagram-element .instagram-photo:hover img {
 
     img.logo {
         width: 100%;
-        max-width: 200px;
-        margin-top: 0px;
-        margin-bottom: 0px;
+        max-width: 100px;
+        margin-top: 2px;
+        margin-bottom: 21px;
     }
 
     .contacticon {
@@ -523,7 +516,7 @@ body .instagram-element .instagram-photo:hover img {
 
     }
     .contacticon img { 
-        width: 26px;
+        width: 27px;
         margin-top: 20px;
     }
 
