--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -251,7 +251,7 @@ img.img-block {
     width: 100%;
     text-align: center;
     margin: 0px;
-    margin-top: -2px;
+    /*margin-top: -2px;*/
     z-index: 999;
 }
 
