--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -216,8 +216,10 @@ img.img-block {
 .mainnav a {
     letter-spacing: 1.5px;
     font-weight: 200;
-    margin-left: 10px;
-    margin-right: 10px;
+    
+    margin-left: 1.8%;
+    margin-right: 1.8%;
+
     padding: 0px 0px;
     font-size: 12px;
     color: white;
