--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -180,7 +180,7 @@ h2.widetext { margin-top: 12px; }
 
 img.logo {
     width: 100%;
-    max-width: 220px;
+    max-width: 230px;
     margin-top: 20px;
     margin-bottom: 0;
 }
@@ -211,11 +211,12 @@ img.img-block {
     display: block;
 	padding: 6px 0;
     background-color: black;
+    background-color: white;
 }
 
 .mainnav a {
     letter-spacing: 1.5px;
-    font-weight: 200;
+    font-weight: 300;
     
     margin-left: 1.8%;
     margin-right: 1.8%;
@@ -223,6 +224,7 @@ img.img-block {
     padding: 0px 0px;
     font-size: 12px;
     color: white;
+    color: black;
     border-bottom: 1px solid transparent;
 }
 
@@ -233,6 +235,7 @@ img.img-block {
 .mainnav a.weddinglink {
     font-family: 'Alex Brush', cursive;
     color: antiquewhite;
+    color: grey;
     font-size: 22px;
 }
 
@@ -277,6 +280,9 @@ img.img-block {
     padding: 3px 0;
     background-color: white;
     color: black;
+
+    background-color: black;
+    color: white;
 }
 .white {
     color: white;
@@ -298,7 +304,7 @@ img.img-block {
 }
 
 .transp {
-    opacity: .92;
+    opacity: .96;
 }
 
 li {
@@ -488,6 +494,11 @@ body .instagram-element .instagram-photo:hover img {
 
 
 /* mobile header elements */
+
+    .headertext {
+        background-color: white;
+        color: black;
+    }
 
     .menuicon {
         margin-top: 3px;
