--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -215,11 +215,11 @@ img.img-block {
 }
 
 .mainnav a {
-    letter-spacing: 1.5px;
-    font-weight: 300;
+    letter-spacing: 1.3px;
+    font-weight: 400;
     
-    margin-left: 1.8%;
-    margin-right: 1.8%;
+    margin-left: 1.9%;
+    margin-right: 1.9%;
 
     padding: 0px 0px;
     font-size: 12px;
@@ -229,7 +229,7 @@ img.img-block {
 }
 
 .mainnav a.menuitem:hover {
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid black;
 }
 
 .mainnav a.weddinglink {
