--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -191,11 +191,30 @@ img.logo {
 }
 
 img.menulogo {
-    margin-top: 10px;
-    /*margin-right: 40px;*/
+    margin-top: 15px;
+    margin-bottom: 10px;
     margin-left: 0px;
-    /*margin-bottom: -3px;*/
 }
+
+/* STICKYMENU */
+.stickytop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    margin: 0px;
+    /*margin-top: -2px;*/
+    z-index: 999;
+}
+.stickytop img.menulogo {
+    margin-top: 5px;
+    margin-bottom: 0px;
+}
+.stickytop img.logo {
+    max-width: 180px;
+}
+/* END: STICKYMENU */
 
 .mainnav a.menulogo-wrapper {
     display: block;
@@ -251,18 +270,6 @@ img.img-block {
 
 .biggertext, .biggertext a {
     font-size: 16px;
-}
-
-/* Sticky NAV */
-.stickytop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    margin: 0px;
-    /*margin-top: -2px;*/
-    z-index: 999;
 }
 
 /* LAYOUT */
