--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -308,11 +308,15 @@ img.img-block {
 }
 
 .bggrey {
-    background-color: #dfdfdf;
+    background-color: #efefef;
 }
 
 .bgnude {
     background-color: #eecbc2;
+}
+
+.bgbordertop {
+    border-top: 1px solid #dfdfdf;
 }
 
 .transp {
@@ -431,29 +435,32 @@ body .instagram-element .instagram-photo:hover img {
 
 /* PHOTOS LAYOUTS */
 
-/* 3 Spalten, Mehr Abstand zwischen Elements */
-/* .instagram-element { margin: -0.8%; } */
-/* .instagram-element .instagram-photo { width: 31.7%; margin: 0.8%; } */
-
-/* 3 Spalten, kein Abstand */
-/*.instagram-element { margin: 0; }
-.instagram-element .instagram-photo { width: 33.33%; margin: 0; }*/
-
 /* 3 Spalten, kleiner Abstand */
-.instagram-element { margin: -0.6%; padding-top: 0; }
+.instagram-element { margin: 0.8% -0.6%; padding-top: 0; }
 .instagram-element .instagram-photo { width: 32.13%; margin: 0.6%; }
 
 @media (max-width: 1800px) {
-    .instagram-element { }
-    .instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }
+    /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
+    .instagram-element { margin: 0.8% 2%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 31.7%; margin: 0.8%; }
 }
 
-@media (max-width: 800px) {
-    .instagram-element .instagram-photo { width: 50%; }
+@media (max-width: 1300px) {
+    /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
+    .instagram-element { margin: 0.8% 0.9%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 31.5%; margin: 0.9%; }
+}
+
+@media (max-width: 850px) {
+    .instagram-element { margin: 0.8% 1.4%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 47.2%; margin: 1.4%; }
 }
 @media (max-width: 600px) {
-    .instagram-element { margin: 1.2%; padding-top: 0; }
-    .instagram-element .instagram-photo { width: 97.6%; margin: 1.2%; }
+    /*.instagram-element { margin: 1.2%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 97.6%; margin: 1.2%; }*/
+
+    .instagram-element { margin: 0.8% 1.8%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 96.4%; margin: 1.8%; }
 }
 
 
