--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -439,28 +439,22 @@ body .instagram-element .instagram-photo:hover img {
 .instagram-element { margin: 0.8% -0.6%; padding-top: 0; }
 .instagram-element .instagram-photo { width: 32.13%; margin: 0.6%; }
 
-@media (max-width: 1800px) {
+@media (max-width: 1920px) {
     /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
-    .instagram-element { margin: 0.8% 2%; padding-top: 0; }
-    .instagram-element .instagram-photo { width: 31.7%; margin: 0.8%; }
-}
-
-@media (max-width: 1300px) {
-    /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
-    .instagram-element { margin: 0.8% 0.9%; padding-top: 0; }
-    .instagram-element .instagram-photo { width: 31.5%; margin: 0.9%; }
+    .instagram-element { margin: -1.6% 0.8%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 31.7%; margin: 1.6% 0.8%; }
 }
 
 @media (max-width: 850px) {
-    .instagram-element { margin: 0.8% 1.4%; padding-top: 0; }
-    .instagram-element .instagram-photo { width: 47.2%; margin: 1.4%; }
+    .instagram-element { margin: -2.8% 1.4%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 47.2%; margin: 2.8% 1.4%; }
 }
 @media (max-width: 600px) {
     /*.instagram-element { margin: 1.2%; padding-top: 0; }
     .instagram-element .instagram-photo { width: 97.6%; margin: 1.2%; }*/
 
-    .instagram-element { margin: 0.8% 1.8%; padding-top: 0; }
-    .instagram-element .instagram-photo { width: 96.4%; margin: 1.8%; }
+    .instagram-element { margin: -4.8% 1.6%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 96.8%; margin: 4.8% 1.6%; }
 }
 
 
