--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -190,7 +190,7 @@ img.logo {
     margin-bottom: 0;
 }
 
-img.menulogo {
+img.desktoplogo {
     margin-top: 15px;
     margin-bottom: 10px;
     margin-left: 0px;
@@ -207,16 +207,14 @@ img.menulogo {
     /*margin-top: -2px;*/
     z-index: 999;
 }
-.stickytop img.menulogo {
+.stickytop img.desktoplogo {
     margin-top: 5px;
     margin-bottom: 0px;
-}
-.stickytop img.logo {
     max-width: 180px;
 }
 /* END: STICKYMENU */
 
-.mainnav a.menulogo-wrapper {
+.mainnav a.desktoplogo-wrapper {
     display: block;
     margin: 5px 0 10px 0;
 }
@@ -493,7 +491,7 @@ body .instagram-element .instagram-photo:hover img {
         border-bottom: 1px solid transparent;
     }
 
-    .mainnav a.menulogo-wrapper { display: none; }
+    .mainnav a.desktoplogo-wrapper { display: none; }
 
     .mainnav a.weddinglink {
         font-size: 26px;
