--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -157,8 +157,8 @@ h2.widetext { margin-top: 12px; }
     vertical-align: middle;
     white-space: nowrap;
     text-decoration: none;
-    margin: 20px;
-    margin-bottom: 30px;
+    margin: 10px;
+    margin-bottom: 20px;
 }
 .mainbutton:hover {
     background: #666;
@@ -437,22 +437,28 @@ body .instagram-element .instagram-photo:hover img {
 .instagram-element { margin: 0.8% -0.6%; padding-top: 0; }
 .instagram-element .instagram-photo { width: 32.13%; margin: 0.6%; }
 
-@media (max-width: 2000px) {
+@media (max-width: 2200px) {
     /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
-    .instagram-element { margin: -2% 0.9%; padding-top: 0; }
-    .instagram-element .instagram-photo { width: 31.5%; margin: 2% 0.9%; }
+    .instagram-element { margin: 0 5%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 31.5%; margin: 0 0.9% 50px 0.9%; }
+}
+
+@media (max-width: 1500px) {
+    /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
+    .instagram-element { margin: 0 1.1%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 31.1%; margin: 0 1.1% 40px 1.1%; }
 }
 
 @media (max-width: 900px) {
-    .instagram-element { margin: -3.2% 1.2%; padding-top: 0; }
-    .instagram-element .instagram-photo { width: 47.6%; margin: 3.2% 1.2%; }
+    .instagram-element { margin: 0 1.2%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 47.6%; margin: 0 1.2% 40px 1.2%; }
 }
 @media (max-width: 600px) {
     /*.instagram-element { margin: 1.2%; padding-top: 0; }
     .instagram-element .instagram-photo { width: 97.6%; margin: 1.2%; }*/
 
-    .instagram-element { margin: -5.2% 1.6%; padding-top: 0; }
-    .instagram-element .instagram-photo { width: 96.8%; margin: 5.2% 1.6%; }
+    .instagram-element { margin: 0 1.6%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 96.8%; margin: 0 1.6% 40px 1.6%; }
 }
 
 
