--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -440,8 +440,14 @@ body .instagram-element .instagram-photo:hover img {
 
 @media (max-width: 2000px) {
     /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
-    .instagram-element { margin: 0 1.1%; padding-top: 0; }
-    .instagram-element .instagram-photo { width: 31.1%; margin: 0 1.1% 40px 1.1%; }
+    .instagram-element { margin: 0 0.75%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 31.8%; margin: 0 0.75% 50px 0.75%; }
+}
+
+@media (max-width: 1400px) {
+    /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
+    .instagram-element { margin: 0 1%; padding-top: 0; }
+    .instagram-element .instagram-photo { width: 31.3%; margin: 0 1% 40px 1%; }
 }
 
 @media (max-width: 900px) {
