--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -192,7 +192,7 @@ img.logo {
 }
 
 img.desktoplogo {
-    margin-top: 15px;
+    margin-top: 20px;
     margin-bottom: 10px;
     margin-left: 0px;
 }
@@ -209,9 +209,9 @@ img.desktoplogo {
     z-index: 999;
 }
 .stickytop img.desktoplogo {
-    margin-top: 5px;
+    margin-top: 10px;
     margin-bottom: 0px;
-    max-width: 180px;
+    /*max-width: 180px;*/
 }
 /* END: STICKYMENU */
 
@@ -533,7 +533,7 @@ body .instagram-element .instagram-photo:hover img {
     }
 
     .logoicon {
-        margin-top: 19px;
+        margin-top: 17px;
         margin-bottom: 9px;
         position: relative;
         text-align: center;
@@ -543,7 +543,7 @@ body .instagram-element .instagram-photo:hover img {
 
     img.logo {
         width: 100%;
-        max-width: 160px;
+        max-width: 170px;
         margin-top: 0px;
         margin-bottom: 0px;
     }
