--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -693,3 +693,16 @@ body .instagram-element .instagram-photo:hover img {
 .contacts, .social {
     padding-top: 40px;
 }
+
+
+.element-description {
+    color:black;
+    font-size: 18px;
+    line-height: 24px;
+    background: white;
+    padding: 10px 30px;
+    font-family: 'Bellefair', serif;
+}
+
+
+
