--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -193,7 +193,7 @@ img.logo {
 
 img.desktoplogo {
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin-left: 0px;
 }
 
@@ -210,14 +210,15 @@ img.desktoplogo {
 }
 .stickytop img.desktoplogo {
     margin-top: 10px;
-    margin-bottom: 0px;
-    /*max-width: 180px;*/
+    margin-bottom: 10px;
+    max-width: 200px;
 }
 /* END: STICKYMENU */
 
 .mainnav a.desktoplogo-wrapper {
     display: block;
     margin: 5px 0 10px 0;
+    border-bottom: 1px solid #dfdfdf;
 }
 
 img.img-block {
@@ -232,8 +233,7 @@ img.img-block {
     /* text-align: left; */
     margin-top: 0px;
     display: block;
-	padding: 6px 0;
-    background-color: black;
+	padding: 10px 10px;
     background-color: white;
 }
 
@@ -547,9 +547,9 @@ body .instagram-element .instagram-photo:hover img {
 
     img.logo {
         width: 100%;
-        max-width: 170px;
-        margin-top: 0px;
-        margin-bottom: 0px;
+        max-width: 150px;
+        margin-top: 3px;
+        margin-bottom: 2px;
     }
 
     .contacticon {
