--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -193,7 +193,7 @@ img.logo {
 
 img.desktoplogo {
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     margin-left: 0px;
 }
 
@@ -241,14 +241,20 @@ img.img-block {
     letter-spacing: 1.3px;
     font-weight: 400;
     
-    margin-left: 1.9%;
-    margin-right: 1.9%;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-left: 1.6%;
+    margin-right: 1.6%;
 
     padding: 0px 0px;
     font-size: 12px;
     color: white;
     color: black;
     border-bottom: 1px solid transparent;
+}
+
+.mainnav a.menuitem {
+    padding: 10px 0;
 }
 
 .mainnav a.menuitem:hover {
@@ -440,14 +446,20 @@ body .instagram-element .instagram-photo:hover img {
 
 
 @media (max-width: 2000px) {
+
+    .content-wrapper { max-width: 1300px; }
+
     /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
-    .instagram-element { margin: 0 3%; padding-top: 0; }
+    .instagram-element { margin: 0 0%; padding-top: 0; }
     .instagram-element .instagram-photo { width: 31.3%; margin: 0 1% 50px 1%; }
 
     .instagram-kinastudio-love .instagram-photo { width: 48%; }
 }
 
 @media (max-width: 1400px) {
+
+    .content-wrapper { max-width: 1100px; }
+
     /*.instagram-element .instagram-photo { width: 33.35%; margin: -0.01%; }*/
     .instagram-element { margin: 0 1.2%; padding-top: 0; }
     .instagram-element .instagram-photo { width: 33%; margin: 0 0.15% 40px 0.15%; }
@@ -456,6 +468,9 @@ body .instagram-element .instagram-photo:hover img {
 }
 
 @media (max-width: 900px) {
+
+    .content-wrapper { max-width: 900px; }
+
     .instagram-element { margin: 0 1.2%; padding-top: 0; }
     .instagram-element .instagram-photo { width: 47.6%; margin: 0 1.2% 40px 1.2%; }
 }
@@ -470,7 +485,7 @@ body .instagram-element .instagram-photo:hover img {
 
 
 
-@media (max-width: 820px) {
+@media (max-width: 920px) {
 
     .desktop { display:none; }
     .desktop-inline { display:none; }
